BasicUI: fix frame visibility state not being processed

--- a/extensions/ui/org.eclipse.smarthome.ui.basic/web-src/smarthome.less
+++ b/extensions/ui/org.eclipse.smarthome.ui.basic/web-src/smarthome.less
@@ -384,6 +384,9 @@
 			display: none;
 		}
 	}
+	&--hidden {
+		display: none;
+	}
 }
 
 .mdl-modal {
